--- a/lab-apis.ipynb
+++ b/lab-apis.ipynb
@@ -38429,7 +38429,7 @@
     "    track = track_item['track']                         # tracks[\"items\"][nº de iter de track_item][\"track\"]   (map)\n",
     "    for artist in track['artists']:                     # artist = tracks[\"items\"][0][\"track\"][artists][iteraAquí]      (list)\n",
     "        artist_name = artist['name']                    # tracks[\"items\"][0][\"track\"][artists][nº de iter de artist][\"name\"]\n",
-    "        if artist_name not in artists_list:  # This ensures each artist is added only once\n",
+    "        if artist_name not in artists_list:             # This ensures each artist is added only once\n",
     "            artists_list.append(artist_name)\n",
     "\n",
     "print(artists_list)"
@@ -38567,9 +38567,7 @@
     "\n",
     "first_ten_songs = get_tracks_from_playlist(playlist)\n",
     "\n",
-    "first_ten_songs\n",
-    "\n",
-    "# POR QUE SI ARRIBA PONE 7 ABAJO ME DA TANTAS?"
+    "first_ten_songs"
    ]
   },
   {
